# hundred-and-ten

./: .ce-review-state.md  .coveragerc  .gitignore  .pylintrc  AGENTS.md  README.md  pyproject.toml  requirements-lint.txt  requirements-publish.txt  requirements-test.txt  setup.py
.github/: dependabot.yml
.github/workflows/: coverage.yaml  deploy-deprecated.yaml  deploy-test.yaml  deploy.yaml  lint.yaml  publish-test.yaml  publish.yaml  tag.yaml
docs/brainstorms/: 2026-04-11-package-restructure-for-gym-requirements.md  2026-04-12-engine-adapter-extraction-requirements.md
docs/plans/: 2026-04-11-001-refactor-package-restructure-gym-readiness-plan.md  2026-04-11-002-refactor-deck-extraction-plan.md  2026-04-11-003-refactor-state-naive-split-plan.md  2026-04-12-001-refactor-engine-adapter-extraction-plan.md  2026-04-12-002-fix-exclude-pyproject-from-sdist-plan.md  2026-04-17-001-refactor-readme-restructure-plan.md
docs/solutions/best-practices/: engineadapter-extraction-test-checklist-2026-04-12.md  monorepo-readme-restructuring-audit-exports-2026-04-17.md  trump-logic-card-instance-method-2026-04-11.md  uv-test-only-dependencies-and-decoupled-strategy-packages-2026-04-11.md  uv-workspace-namespace-package-extraction-2026-04-11.md
docs/solutions/build-errors/: pypi-sha-mismatch-version-bump-required-2026-04-12.md  uv-build-backend-namespace-module-directory-required-2026-04-11.md
docs/solutions/logic-errors/: action-for-pipeline-correctness-2026-04-12.md  discarded-seat-field-always-zero-2026-04-17.md  game-state-and-ai-logic-fixes-2026-04-10.md
docs/solutions/test-failures/: pytest-importlib-module-collision-2026-04-11.md
hundred_and_ten/: bid.py  constants.py  game.py  game_players.py  hundred_and_ten_error.py  people.py  person.py  players.py  round.py
hundredandten/: __init__.py  action.py  actions.py  bid.py  constants.py  decisions.py  deck.py  discard.py  events.py  game.py  group.py  people.py  person.py  player.py  round.py  state.py  trick.py
src/hundred_and_ten/: game.py
tests/: arrange.py  game_creation.py  game_setup.py  setup.py  test_game.py  test_people.py  test_person.py  test_start_of_game.py  test_waiting_for_players_game.py
tests/decisions/: test_bid_decision.py  test_card_decisions.py  test_five_decision.py  test_trump_decision.py
tests/deck/: test_deck.py
tests/game/: test_act_returns_actions.py  test_bid_comparison.py  test_bidding.py  test_discard.py  test_end_bidding.py  test_game_events.py  test_game_scoring.py  test_new_game.py  test_play_card.py  test_round_scoring.py  test_start_of_game.py  test_trump_selection.py  test_waiting_for_players_game.py
tests/people/: test_next_person.py  test_people_roles.py  test_person.py  test_upsert_people.py
tests/state/: test_game_state.py
tests/suggestion/: test_automated_play.py
tests/trick/: test_trick.py
