[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[project]
name = "hundredandten"
version = "5.0.0"
description = "An engine to play the game Hundred and Ten"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "Seamus Lowry" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = []

[dependency-groups]
lint = [
    "pylint==4.0.5",
    "pyright==1.1.408",
    "ruff==0.15.8",
    "black==26.3.1",
]
test = [
    "coverage==7.13.5",
    "pytest==9.0.2",
]

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.ruff]
target-version = "py314"
line-length = 100
lint.extend-select = ["I"]

[tool.black]
target-version = ["py314"]

[tool.uv.build-backend]
module-root = "."
