[project]
name = "hundredandten"
version = "0.0.0"
description = "Packages relating to the game Hundred and Ten"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
lint = [
    "pylint==4.0.5",
    "pyright==1.1.408",
    "ruff==0.15.9",
    "black==26.3.1",
]
test = [
    "coverage==7.13.5",
    "pytest==9.0.2",
]

[tool.coverage.run]
source = ["hundredandten.engine"]
omit = [
    "packages/*/tests/*",
]

[tool.ruff]
target-version = "py314"
line-length = 100
lint.extend-select = ["I"]

[tool.black]
target-version = ["py314"]

[tool.uv]
package = false  # the project itself is not a package

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true